[package]
name = "editor"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
ed25519-compact = { version = "2", default-features = false }
miniz_oxide = { version = "0.7", default-features = false, features = ["with-alloc", "std"] }
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
